# kdex-sdk-dflow

./: Cargo.toml  README.md
crates/kdex-client/: Cargo.toml
crates/kdex-client/src/: curves.rs  lib.rs  liquidity.rs  oracle.rs  pda.rs  quote.rs  scope_types.rs  state.rs  swap_ix.rs
crates/kdex-client/src/_generated/: mod.rs  programs.rs
crates/kdex-client/src/_generated/accounts/: mod.rs  swap_pool.rs
crates/kdex-client/src/_generated/errors/: hyperplane.rs  kdex.rs  mod.rs
crates/kdex-client/src/_generated/instructions/: close_pool.rs  deposit.rs  initialize_pool.rs  mod.rs  swap.rs  swap2.rs  update_pool_config.rs  withdraw.rs  withdraw_fees.rs
crates/kdex-client/src/_generated/types/: close_pool.rs  curve_user_parameters.rs  deposit.rs  fees.rs  mod.rs  price_chain_fetched.rs  swap.rs  update_pool_config.rs  update_pool_config_mode.rs  update_pool_config_value.rs  withdraw.rs  withdraw_fees.rs
crates/kdex-curve/: Cargo.toml
crates/kdex-curve/src/: constant_price.rs  constant_product.rs  error.rs  fees.rs  lib.rs  math.rs  offset.rs  stable.rs
crates/kdex-curve/src/oracle/: constant_spread.rs  inventory_skew.rs  mod.rs
sdk/: Cargo.toml
sdk-dflow/: Cargo.toml
sdk-dflow/examples/: list_pools.rs  quote.rs
sdk-dflow/src/: amm.rs  error.rs  lib.rs  oracle.rs
sdk-dflow/tests/: pool_test.rs
sdk/src/: client.rs  config.rs  error.rs  lib.rs  oracle.rs  pool.rs  quote.rs
