[package]
name = "kdex-client"
version = "0.1.0"
edition = "2021"
description = "Generated Rust client for Hyperplane/KDEX AMM program"
license = "MIT"
authors = ["Kamino Finance"]
repository = "https://github.com/Kamino-Finance/hyperplane"

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
solana-pubkey = { version = "2.2", features = ["borsh"] }
solana-instruction = "2.2"
solana-account-info = "2.2"
solana-account = { version = "2.2", optional = true }
solana-program-error = "2.2"
solana-cpi = "2.2"
solana-client = { version = "2.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.0", optional = true }
anchor-lang = { version = "0.32.1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
fetch = ["dep:solana-client", "dep:solana-account"]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor"]
