[package]
name = "kdex-curve"
version = "0.1.0"
edition = "2021"
description = "Shared curve math for KDEX AMM pools"
license = "MIT"
authors = ["Kamino Finance"]
repository = "https://github.com/Kamino-Finance/kdex-private"
keywords = ["solana", "amm", "defi", "kdex", "curve"]

[features]
default = ["std"]
std = []

[dependencies]
# Math utilities (for stable curve U256)
spl-math = { version = "0.3", features = ["no-entrypoint"] }

# Error handling
thiserror = "1.0"
